2024-09-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha02: Adieu Borrego';git push
	git tag -a 5.2.9-alpha02 -m 'fxm';git push --tags

	* NCO 5.2.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha01: Camp Rick';git push
	git tag -a 5.2.9-alpha01 -m 'Functionally identical to 5.2.8 + ECMWF IFS fixes';git push --tags

	* Update vertical interpolation regressions with ECMWF IFS documentaiton in nco.texi

	* Require --ps_nm=lnsp for ECMWF IFS hybrid coordinates

	* Fix vertical interpolation regressions with ECMWF IFS hybrid coordinates

2024-09-11  Charlie Zender  <zender@uci.edu>

	* Shift from clang++ -std=c++17 and clang to clang++ -std=c++23	and clang -std=c23 on MacOS

2024-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8: Sitton Peak';git push
	git tag -a 5.2.8 -m 'ncremap: fix sub-SGS algorithm, sum_scl, rgn_stt=sum, chk_map dgn area_b, cnk max WARNING; ncatted/ncrename: hst_att_cat NC_STRING WARNING';git push --tags

	* Document --glb_stt/--sum_scl options

2024-08-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha03: Swim, Rick, Swim!';git push
	git tag -a 5.2.8-alpha03 -m 'ncremap: fix sub-SGS algorithm, NC_ERANGE dgn, --sum_scl';git push --tags

	* ncremap: Yesterday's SGS fix also removed need for sub_sgs_frc_out_thr so remove it
	Verify threshold-free sub-SGS regridding handles all ELM problems from the past (see 20220615)
	Eliminates last kludge in SGS regridder!

2024-08-30  Charlie Zender  <zender@uci.edu>

	* ncremap: Stop weighting accumulation to SGS values where sgs_frc_in is missing value
	Potentially serious bug most likely to affect ELM datasets whose sgs_frc = landfrac contains missing values
	Also crops-up when applying new SGS variable (e.g., Icemask) in regions where ELM may not have valid input
